<resources>
    <string name="app_name">HelloMyDoc2</string>
    <string name="facebook_app_id">559340408710976</string>
    <string name="fb_login_protocol_scheme">fb559340408710976</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="default_notification_channel_id">channel1</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="get_started">Get Started</string>
    <string name="please_put_a_eamil_or_mobile">Please put a email or mobile</string>
    <string name="please_put_a_valid_email_or_mobile">Please put a valid email or mobile</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="wrong_password_pattern">Wrong password pattern</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="enter_your_phone_number">Enter your phone number they we will send you a code to reset your password</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_ask"><u>Forgot Password?</u></string>
    <string name="add_number_terms_p1">\"By providing my phone number, I hereby agree and accept the \"</string>
    <string name="add_number_terms_p2">Terms of Service</string>
    <string name="add_number_terms_p3">\" and \"</string>
    <string name="add_number_terms_p4">Privacy Policy</string>
    <string name="add_number_terms_p5">\" in use of this app.\"</string>
    <string name="country_code_spaced">+254\u0020\u0020</string>
    <string name="please_put_a_mobile_number">Please put mobile number</string>
    <string name="please_put_a_valid_mobile_number">Please put a valid mobile number</string>
    <string name="please_put_the_otp">Please put the OTP</string>
    <string name="otp_does_not_match">OTP does not match</string>
    <string name="user_id_seems_to_be_empty">User id seems to be empty</string>
    <string name="please_put_your_name">Please put your name</string>
    <string name="please_put_a_valid_name">Please put a valid name</string>
    <string name="please_put_email">Please put email</string>
    <string name="please_put_a_valid_email">Please put a valid email</string>
    <string name="ok">Ok</string>
    <string name="password_pattern_warning">The password must be at least 8 characters long, must contain one small case letter, one upper case letter one number and a special character</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="confirm_password_does_not_match">Confirm password does not match</string>
    <string name="send_reset_code">Send reset code</string>
    <string name="your_password">Your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="consultations">Consultations</string>
    <string name="my_bookings">My Bookings</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hey_exclamation">Hey!</string>
    <string name="shimmer_detect_text">=#*#sss=</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="general_practitioner">General Practitioner</string>
    <string name="no_upconing_appointments">No upcoming appointments</string>
    <string name="not_found">Not found</string>
    <string name="_continue">Continue</string>
    <string name="video_consultation">Video Consultation</string>
    <string name="price">Price</string>
    <string name="chat_consultation">Chat Consultation</string>
    <string name="call_consultation">Call Consultation</string>
    <string name="please_choose_appoint_type">Please choose appointment type</string>
    <string name="choose_nappointment_type">Choose\nAppointment Type</string>
    <string name="choose_date_time"><![CDATA[Choose\nDate & Time]]></string>
    <string name="no_slots">No slots</string>
    <string name="slots">Slots</string>
    <string name="eee_mmm_d_yyyy">EEE, MMM d, yyyy</string>
    <string name="eee_mmm_d">EEE, MMM d</string>
    <string name="mysql_date_format">yyyy-MM-dd</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="available">available</string>
    <string name="next_availability_on">NEXT AVAILABILITY ON</string>
    <string name="title_activity_add_patient_details">AddPatientDetailsActivity</string>
    <string name="add_patient_details">Add Patient Details</string>
    <string name="enter_patient_name">Enter Patient Name</string>
    <string name="patient_age">Patient Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="symptoms">Symptoms</string>
    <string name="choose_doctor">Choose Doctor</string>
    <string name="slot_not_selected">Slot not selected</string>
    <string name="other">Other</string>
    <string name="please_put_patient_name">Please put patient name</string>
    <string name="please_put_patient_age">Please put patient age</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="please_put_symptoms">Please put symptoms</string>
    <string name="please_select_a_doctor">Please select a doctor</string>
    <string name="age">Age</string>
    <string name="add_payment_details">Add Payment Details</string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="please_select_payment_method">Please select payment method</string>
    <string name="currency">KHS</string>
    <string name="please_check_sometime_later">Please check sometime later</string>
    <string name="thank_you">Thank You !</string>
    <string name="go_to_consultations">Go to consultations</string>
    <string name="no_bookings_yet">No bookings yet</string>
    <string name="choose_speciality">Choose speciality</string>
    <string name="general_npractitioner">General\nPractitioner</string>
    <string name="you">You</string>
    <string name="notifications">Notifications</string>
    <string name="no_notifications">No Notifications</string>
    <string name="you_dont_have_any_notifications">You dont have any notifications</string>
    <string name="medical_records">Medical Records</string>
    <string name="add_a_medical_record">Add a medical record</string>
    <string name="detailed_health_record_message">A detailed health history helps\na doctor diagnose you better.</string>
    <string name="add_a_record">Add a record</string>
    <string name="add_more_nimages">Add more images</string>
    <string name="add_image">Add image</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="upload_files">Upload files</string>
    <string name="upload_from_gallery">Upload from gallery</string>
    <string name="enter_record_name">Enter record name</string>
    <string name="record_name">Record name</string>
    <string name="report">Report</string>
    <string name="prescription">Prescription</string>
    <string name="invoice">invoice</string>
    <string name="type_of_record">Type of record</string>
    <string name="record_created_on">Record Created on</string>
    <string name="upload_record">Upload Record</string>
    <string name="attach">Attach</string>
    <string name="more_attachments">More attachments</string>
    <string name="record_added_successfully">Record added successfully</string>
    <string name="records_added_by_you">Records added by you</string>
    <string name="title_activity_popup">PopupActivity</string>
    <string name="title_activity_members">MembersActivity</string>
    <string name="age_and_gender_updated_successfully">Age and gender uupdated successfully</string>
    <string name="member_added_successfully">Member added successfully</string>
    <string name="member_updated_successfully">Member updated successfully</string>
    <string name="member_deleted_successfully">Member deleted successfully</string>
    <string name="doctor_not_found">Doctor not found</string>
    <string name="user_not_found">User not found</string>
    <string name="peer">Peer</string>
    <string name="_00_00_mins">00:00 Mins</string>
    <string name="title_activity_medical_history">MedicalHistoryActivity</string>
    <string name="title_activity_prescriptions">PrescriptionsActivity</string>
    <string name="title_activity_prescription_details">PrescriptionDetailsActivity</string>
    <string name="prescription_details">Prescription Details</string>
    <string name="title_activity_doctor_details">DoctorDetailsActivity</string>
    <string name="title_activity_medical_record_details">MedicalRecordDetailsActivity</string>
    <string name="title_activity_new_appointment">NewAppointmentActivity</string>
</resources>