<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddPatientDetailsActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_left"
        app:tint="@color/black"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/add_patient_details"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_bold"
        android:textSize="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"/>

    <FrameLayout
        android:id="@+id/fl_patient_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_head"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/gray"
            android:inputType="text"
            android:hint="@string/enter_patient_name"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name_core"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:imeOptions="actionNext"
                android:layout_marginBottom="8dp"
                android:inputType="text"
                android:background="#00000000"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/iv_drop_down"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
            app:tint="@color/gray"
            android:layout_gravity="right|center_vertical"
            android:foreground="?android:attr/selectableItemBackground"/>

    </FrameLayout>



    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llh_age_gender_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/fl_patient_name"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center_vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/gray"
            android:inputType="text"
            android:hint="@string/age"
            app:layout_constraintTop_toBottomOf="@id/tv_head"
            android:layout_weight="1"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_age_core"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:imeOptions="actionNext"
                android:layout_marginBottom="8dp"
                android:inputType="number"
                android:background="#00000000"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/male"/>

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/female"/>

            <RadioButton
                android:id="@+id/rb_other"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/other"/>

        </RadioGroup>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tv_symptoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symptoms"
        app:layout_constraintTop_toBottomOf="@id/llh_age_gender_row"
        android:textSize="14sp"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        />


    <EditText
        android:id="@+id/et_symptoms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_symptoms"
        android:layout_marginTop="32dp"
        />



    <TextView
        android:id="@+id/tv_choose_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_doctor"
        android:textColor="@color/black"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/et_symptoms"
        android:textSize="20sp"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:fontFamily="@font/roboto_bold"
        />

    <com.hellomydoc.AnyListView
        android:id="@+id/alv_doctors"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_doctor"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clipToPadding="false"
        android:paddingBottom="80dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:id="@+id/v_bar_above_doctors"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/alv_doctors"
        android:alpha="0"
        android:elevation="2dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/_continue"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:background="@drawable/red_btn_background"
        android:layout_marginLeft="@dimen/btn_side_margin"
        android:layout_marginRight="@dimen/edit_text_side_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"/>

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/cv_members"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>