<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/et_password"
    android:elevation="10dp"
    android:paddingBottom="25dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/ll_forgot_password"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/forgot_back_btn"
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@drawable/ic_left"/>

        <TextView
            android:id="@+id/forgot_password_text"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textStyle="bold"
            android:textSize="26dp"
            android:text="@string/forgot_password"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/forgot_back_btn"
            app:layout_constraintLeft_toLeftOf="@+id/forgot_back_btn"/>

        <TextView
            android:id="@+id/tv_forgot_desc"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/enter_your_phone_number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgot_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/gray"
            android:inputType="phone"
            android:hint="@string/your_phone_number"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_desc"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_id_forgot"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:imeOptions="actionNext"
                android:layout_marginBottom="8dp"
                android:inputType="phone"
                android:background="#00000000"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_send_otp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/send_reset_code"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:background="@drawable/red_btn_background"
            android:layout_marginLeft="@dimen/btn_side_margin"
            android:layout_marginRight="@dimen/edit_text_side_margin"
            app:layout_constraintTop_toBottomOf="@+id/forgot_email"
            app:layout_constraintLeft_toLeftOf="@+id/forgot_email"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>