<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddPatientDetailsActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_left"
        app:tint="@color/black"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/add_payment_details"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_bold"
        android:textSize="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"/>


    <TextView
        android:id="@+id/tv_choose_payment_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_payment_method"
        app:layout_constraintTop_toBottomOf="@id/iv_back"
        android:layout_marginTop="48dp"
        app:layout_constraintLeft_toLeftOf="@id/iv_back"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/black"
        />



    <com.hellomydoc.AnyListView
        android:id="@+id/alv_payment_methods"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_payment_method"
        android:layout_marginTop="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        android:clipToPadding="false"
        android:paddingBottom="100dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:id="@+id/v_bar"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/alv_payment_methods"
        android:alpha="0"
        android:elevation="2dp"
        />

    <Button
        android:id="@+id/bt_continue"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="24dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>