<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MyBookingsFragment"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/my_bookings"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"/>

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/cv_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_head"
        android:layout_marginTop="8dp"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llv_no_bookings_yet"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_head"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/ic_history"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_bookings_yet"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_bold"
            android:textSize="20dp"
            android:layout_marginTop="24dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_book_appointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_appointment"
            android:textColor="@color/black"
            android:background="@drawable/gray_border"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto_bold"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"/>

    </androidx.appcompat.widget.LinearLayoutCompat>



    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="24dp"
        app:icon="@drawable/ic_baseline_add_24"
        app:iconTint="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>